--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "parcel build ./src/index.html",
     "test": "jest"
   },
+  "engines" : { 
+    "npm" : ">=7.0.0",
+    "node" : ">=16.0.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
