--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest"
   },
   "engines" : { 
-    "npm" : ">=7.0.0",
+    "yarn" : "1.x",
     "node" : ">=16.0.0"
   },
   "devDependencies": {
