--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines" : { 
+    "yarn" : "1.x"
+  },
   "scripts": {
     "dev": "parcel ./src/index.html",
     "build": "parcel build ./src/index.html",
     "test": "jest"
   },
-  "engines" : { 
-    "yarn" : "1.x",
-    "node" : ">=16.0.0"
-  },
+ 
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
